--- a/history.html
+++ b/history.html
@@ -22,10 +22,12 @@
   </div>
   
   <nav class="navbar navbar-expand-lg">
+    <!-- logo section-->
     <div class="container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
         <img src="images/Screenshot 2023-11-29 at 11.12.16 PM.png" alt="Logo" height=100>
       </a>
+    <!-- navbar section -->  
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -35,10 +37,10 @@
             <a class="nav-link" href="#">News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">What is Buggy</a>
+            <a class="nav-link" href="whatisbuggy.html">What is Buggy</a>
           </li>
           <li class="nav-item dropdown nav-fill">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="history.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               History
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -57,12 +59,15 @@
         </ul>
       </div>
     </div>
-  </nav>
 
+  </nav>
+  <!-- Home -> History section-->
   <div class="container breadcrumb-container">
-    <span class="breadcrumb">Home > History</span>
+    <span class="navgoingto"><a class="homelink" href="index.html">Home</a></span>
+    <span class="navgoingto">> History</span>
   </div>
-  <!-- Bootstrap JS and its dependencies -->
+
+
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.9.2/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
