--- a/whatisbuggy.html
+++ b/whatisbuggy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="stylesheet_Corince.css" rel="stylesheet">
+    <link href="whatisbuggy.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>What is Buggy</title>
 </head>
@@ -15,7 +15,7 @@
     <div id="carouselVideo" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="background_image" src="images/whatisbuggy_1.jpeg">
+            <img class="background_image" src="images/whatisbuggy_background1.jpeg">
             <!-- <iframe width="100%" height="800px" src="https://www.youtube.com/embed/Z0PJsde2Ew0?si=Xoh7d0rFserXK9Ts" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
             </div>
         <div class="carousel-item">
