--- a/index.html
+++ b/index.html
@@ -1,16 +1,117 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta charset="UTF-8" />
-		<meta name="description" content="website for Carnegie Mellon University Buggy Alumni Association" />
+		<meta
+			name="description"
+			content="website for Carnegie Mellon University Buggy Alumni Association"
+		/>
 		<meta
 			name="keywords"
 			content="website, buggy, alumni, CMU, Carnegie Mellon University"
 		/>
 		<meta name="author" content="CMU BAA" />
-        <title>CMU Buggy Alumni Association</title>
+		<title>CMU Buggy Alumni Association</title>
+		<!-- Bootstrap CSS link -->
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+			crossorigin="anonymous"
+		/>
+		<!-- custom css -->
+		<link rel="stylesheet" type="text/css" href="./homepage.css" />
+	</head>
+	<body>
+		<div class="header-top">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6">
+						<span>CMU BUGGY ALUMNI ASSOCIATION</span>
+					</div>
+					<div class="col-md-6 race-info">
+						<span>Race Day in 2024: Apr 12 - 13</span>
+					</div>
+				</div>
+			</div>
+		</div>
 
-    </head>
-    <body></body>
+		<nav class="navbar navbar-expand-lg">
+			<!-- logo section-->
+			<div class="container">
+				<a class="navbar-brand" href="index.html">
+					<img
+						src="images/Screenshot 2023-11-29 at 11.12.16 PM.png"
+						alt="Logo"
+						height="100"
+					/>
+				</a>
+				<!-- navbar section -->
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-toggle="collapse"
+					data-target="#navbarNavDropdown"
+					aria-controls="navbarNavDropdown"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNavDropdown">
+					<ul class="navbar-nav ml-auto">
+						<li class="nav-item active">
+							<a class="nav-link" href="#">News</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="whatisbuggy.html">What is Buggy</a>
+						</li>
+						<li class="nav-item dropdown nav-fill">
+							<a
+								class="nav-link dropdown-toggle"
+								href="history.html"
+								id="navbarDropdownMenuLink"
+								data-toggle="dropdown"
+								aria-haspopup="true"
+								aria-expanded="false"
+							>
+								History
+							</a>
+							<div
+								class="dropdown-menu"
+								aria-labelledby="navbarDropdownMenuLink"
+							>
+								<a class="dropdown-item" href="#">Past Race Results</a>
+								<a class="dropdown-item" href="#"
+									>Buggies and Buggy Organizations</a
+								>
+								<a class="dropdown-item" href="#">Media</a>
+								<a class="dropdown-item" href="#"
+									>Our 100 Years of Buggy Blog Series</a
+								>
+							</div>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">About BAA</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Gallery</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+		<!-- Bootstrap Popper and JS link -->
+		<script
+			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+			integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+			integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+			crossorigin="anonymous"
+		></script>
+	</body>
 </html>
