--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<li class="nav-item">
 							<a class="nav-link" href="whatisbuggy.html">What is Buggy</a>
 						</li>
-						<li class="nav-item dropdown nav-fill">
+						<li class="nav-item dropdown">
 							<a
 								class="nav-link dropdown-toggle"
 								href="history.html"
@@ -102,6 +102,64 @@
 				</div>
 			</div>
 		</nav>
+		<div
+			id="racedayCarousel"
+			class="carousel slide"
+			data-bs-ride="carousel"
+            data-bs-interval="100000"
+		>
+			<div class="carousel-indicators">
+				<button
+					type="button"
+					data-bs-target="#racedayCarousel"
+					data-bs-slide-to="0"
+					class="active"
+					aria-current="true"
+					aria-label="Slide 1"
+				></button>
+				<button
+					type="button"
+					data-bs-target="#racedayCarousel"
+					data-bs-slide-to="1"
+					aria-label="Slide 2"
+				></button>
+				<button
+					type="button"
+					data-bs-target="#racedayCarousel"
+					data-bs-slide-to="2"
+					aria-label="Slide 3"
+				></button>
+			</div>
+			<div class="carousel-inner">
+				<div class="carousel-item">
+					<img src="./images/buggy21.jpg" class="d-block w-100" alt="raceday 2021" />
+				</div>
+                <div class="carousel-item active">
+					<img src="./images/raceDayFringeA.jpg" class="d-block w-100" alt="fringe A" />
+				</div>
+				<div class="carousel-item">
+					<img src="./images/raceDayScreen.jpeg" class="d-block w-100" alt="raceday" />
+				</div>
+			</div>
+			<button
+				class="carousel-control-prev"
+				type="button"
+				data-bs-target="#racedayCarousel"
+				data-bs-slide="prev"
+			>
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+			</button>
+			<button
+				class="carousel-control-next"
+				type="button"
+				data-bs-target="#racedayCarousel"
+				data-bs-slide="next"
+			>
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+			</button>
+		</div>
 		<!-- Bootstrap Popper and JS link -->
 		<script
 			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
