history page draft 1 done

--- a/history.html
+++ b/history.html
@@ -67,10 +67,72 @@
     <span class="navgoingto">> History</span>
   </div>
 
+  <div class="header">
+    <div class="container">
+      <h1 class="historyheader">The History of Buggy</h1>
+    </div>
+  </div>
+  
+  <div class="record-section">
+    <div class="container">
+      <p>Records / Mens: 2:02.16 / Womens: 2:23.27 / All Gender: 2:45.58</p>
+    </div>
+  </div>
+
+  <div class="custom-container"> <!-- Custom container for 80% width -->
+    <div class="custom-section">
+      <img src="images/PastRace.jpg" alt="Buggy Race" class="img-fluid"> <!-- Replace with your image path -->
+      <div class="text-content">
+        <div class = "listtitle"><h2>Past Race Results</h2></div>
+        <div class="list-group">
+          <a href="#" class="list-group-item linkColor">Race Results for Every Year</a>
+          <a href="#" class="list-group-item linkColor">Every Buggy Organization, past or present</a>
+          <a href="#" class="list-group-item linkColor">Awards for the Design Competition</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="custom-section">
+      <img src="images/buggy100.jpeg" alt="Buggy Race" class="img-fluid"> <!-- Replace with your image path -->
+      <div class="text-content">
+        <div class = "listtitle"><h2>Buggies and Buggy Organizations</h2></div>
+        <div class="list-group">
+          <a href="#" class="list-group-item linkColor">Every buggy We have Identified</a>
+          <a href="#" class="list-group-item linkColor">Every Buggy Organization, Past and Present</a>
+          <a href="#" class="list-group-item linkColor">Search people to see the races they were in</a>
+          <a href="#" class="list-group-item linkColor">The People Who Made Sweepstakes Happen</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="custom-section">
+      <img src="images/BuggyBook.jpg" alt="Buggy Race" class="img-fluid"> <!-- Replace with your image path -->
+      <div class="text-content">
+        <div class = "listtitle"><h2>Media</h2></div>
+        <div class="list-group">
+          <a href="#" class="list-group-item linkColor">Past Buggy Books</a>
+          <a href="#" class="list-group-item linkColor">Videos of previous Racedays</a>
+          <a href="#" class="list-group-item linkColor">Photos of previous Racedays</a>
+          <a href="#" class="list-group-item linkColor">Past Raceday Previews and Spotting Guides</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="custom-section">
+      <img src="images/Our100yearsBuggy.jpg" alt="Buggy Race" class="img-fluid"> <!-- Replace with your image path -->
+      <div class="text-content">
+        <div class = "listtitle"><h2>Our 100 Years of Buggy Blog Series</h2></div>
+        <div class="list-group">
+          <a href="#" class="list-group-item linkColor">Buggy Blogs</a>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.9.2/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.7.3/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  
   </body>
   </html>
