--- a/whatisbuggy.html
+++ b/whatisbuggy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="whatisbuggy.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>What is Buggy</title>
 </head>
 <body>
@@ -38,10 +38,10 @@
               <li class="nav-item active">
                 <a class="nav-link" href="#">News</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item nav-fill">
                 <a class="nav-link" href="whatisbuggy.html">What is Buggy</a>
               </li>
-              <li class="nav-item dropdown nav-fill">
+              <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="history.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   History
                 </a>
@@ -61,8 +61,9 @@
             </ul>
           </div>
         </div>
-    
       </nav>
+
+
       <!-- Home -> What is Buggy section-->
       <div class="container breadcrumb-container">
         <span class="navgoingto"><a class="homelink" href="index.html">Home</a></span>
@@ -71,28 +72,45 @@
 
 
       
-    <!-- This is the carousel for the video -->
-    <div id="carouselVideo" class="carousel slide">
+    <!-- This is the carousel for the images -->
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="background_image" src="images/whatisbuggy_background1.jpeg">
-            <!-- <iframe width="100%" height="800px" src="https://www.youtube.com/embed/Z0PJsde2Ew0?si=Xoh7d0rFserXK9Ts" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+            <img src="images/whatisbuggy_background1.jpeg" class="d-block w-100 h-80" alt="background1">
+            <div class="carousel-caption d-none d-md-block">
+              <h4>2023 BUGGY HEAT</h4>
+              <p>2023 - Fringe A's Ace Engel shoves Baltic to Olivia Corrodi at the Hill 1-2 Transition
+                in Lane 1 of Women's Finals Heat 4. Credit: Ben Matzke</p>
             </div>
-        <div class="carousel-item">
-            <iframe width="100%" height="800px" src="https://www.youtube.com/embed/mgLyBbGpXf8?si=_qkA3wgCCUdOxAYc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
+          <div class="carousel-item">
+            <img src="images/whatisbuggy_background2.jpeg" class="d-block w-100 h-80" alt="background2">
+            <div class="carousel-caption d-none d-md-block">
+              <h4>2022 BUGGY HEAT</h4>
+              <p>2022 - Fringe B's Justin Zhang pushes Burnout across the Finish Line in Men's Heat 12. Credit: Ben Matzke</p>
             </div>
-        <div class="carousel-item">
-            <iframe width="100%" height="800px" src="https://www.youtube.com/embed/sIgBTHG7kEQ?si=xV4TBsjH0wBdwSpr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
+          <div class="carousel-item">
+            <img src="images/whatisbuggy_background3.jpeg" class="d-block w-100 h-80" alt="background3">
+            <div class="carousel-caption d-none d-md-block">
+              <h4>2024 PRACTICE SESSION</h4>
+              <p>Practice Session. Credit: Matt Gallabrese</p>
+            </div>
+          </div>
         </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
 
     <!-- This is What is Buggy Grid (left) and When is it (right) -->
