--- a/whatisbuggy.html
+++ b/whatisbuggy.html
@@ -66,9 +66,14 @@
 
       <!-- Home -> What is Buggy section-->
       <div class="container breadcrumb-container">
-        <span class="navgoingto"><a class="homelink" href="index.html">Home</a></span>
+        <span class="navgoingto"><a class="homelink" href="index.html"><u>Home</u></a></span>
         <span class="navgoingto">> What is Buggy</span>
+       <div>
+        <p id="topwhatisbuggy">What is Buggy</p>
       </div>
+      </div>
+
+       
 
 
       
@@ -83,17 +88,18 @@
           <div class="carousel-item active">
             <img src="images/whatisbuggy_background1.jpeg" class="d-block w-100 h-80" alt="background1">
             <div class="carousel-caption d-none d-md-block">
-              <h4>2023 BUGGY HEAT</h4>
-              <p>2023 - Fringe A's Ace Engel shoves Baltic to Olivia Corrodi at the Hill 1-2 Transition
-                in Lane 1 of Women's Finals Heat 4. Credit: Ben Matzke</p>
+              <h4>2022 BUGGY HEAT</h4>
+              <p>2022 - Fringe B's Justin Zhang pushes Burnout across the Finish Line in
+                Men's Heat 12. Credit: Ben Matzke</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/whatisbuggy_background2.jpeg" class="d-block w-100 h-80" alt="background2">
             <div class="carousel-caption d-none d-md-block">
-              <h4>2022 BUGGY HEAT</h4>
-              <p>2022 - Fringe B's Justin Zhang pushes Burnout across the Finish Line in Men's Heat 12. Credit: Ben Matzke</p>
-            </div>
+              <h4>2023 BUGGY HEAT</h4>
+              <p>2023 - Fringe A's Ace Engel shoves Baltic to Olivia Corrodi at the Hill 1-2 Transition
+                in Lane 1 of Women's Finals Heat 4. Credit: Ben Matzke</p>
+              </div>
           </div>
           <div class="carousel-item">
             <img src="images/whatisbuggy_background3.jpeg" class="d-block w-100 h-80" alt="background3">
@@ -104,14 +110,15 @@
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="carousel-control-prev-icon" aria-hidden="false"></span>
           <span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="carousel-control-next-icon" aria-hidden="false"></span>
           <span class="sr-only">Next</span>
         </a>
       </div>
+      <br><br>
 
     <!-- This is What is Buggy Grid (left) and When is it (right) -->
     <div class="top_container">
