add images carousel

--- a/whatisbuggy.html
+++ b/whatisbuggy.html
@@ -69,7 +69,7 @@
         <span class="navgoingto"><a class="homelink" href="index.html"><u>Home</u></a></span>
         <span class="navgoingto">> What is Buggy</span>
        <div>
-        <p id="topwhatisbuggy">What is Buggy</p>
+        <p class="size26">What is Buggy</p>
       </div>
       </div>
 
@@ -120,10 +120,12 @@
       </div>
       <br><br>
 
+
+
     <!-- This is What is Buggy Grid (left) and When is it (right) -->
     <div class="top_container">
         <div class="whatIsBuggy">
-            <h3>What is Buggy</h3>
+            <p class="size26">What is Buggy</p>
             <p>Buggy (also called Sweepstakes) is a race held annually since 1920
                 at Carnegie Mellon. Teams of five athletes (the pushers) push an
                 un-motorized vehicle (a buggy) containing a driver around a 0.84 
@@ -135,7 +137,7 @@
         </div>
         <div class="whenIsIt">
             <br><br>
-            <h3>When is it</h3>
+            <p class="size26">When is it</p>
             <p>Raceday: CMU's Spring Carnival, generally in mid-April on Friday and Saturday 8am - noon.</p>
             <p>Practice: Sept-Nov and Feb-April on Weekends Sunrise - 9am.</p>
         </div>
