add images carousel

--- a/whatisbuggy.html
+++ b/whatisbuggy.html
@@ -143,8 +143,11 @@
         </div>
     </div>
 
+    
+    <hr class="separation">
     <!-- Begin your buggy journey  -->
     <div class="middle_container">
+        <p class="size26">Begin Your Buggy Journey</p>
         <div class="row">
         <div class="col-12 col-md-4">
             <div class="card">
@@ -159,7 +162,7 @@
             <div class="card">
                 <div class="card-body">
                 <h5 class="card-title">START A TEAM</h5>
-                <p class="card-text">“All things you want to know before starting your own team!”</p>
+                <p class="card-text"><u>“All things you want to know before starting your own team!”</u></p>
                 </div>
             </div>
         </div>  
@@ -167,16 +170,49 @@
             <div class="card">
                 <div class="card-body">
                 <h5 class="card-title">STARTER KIT</h5>
-                <p class="card-text">“Check our information for people who have never tried buggy before!”</p>
+                <p class="card-text"><u>“Check our information for people who have never tried buggy before!”</u></p>
                 </div>
             </div>
         </div>  
     </div>
     </div>
-
+    <hr class="separation">
 
 
     <!-- Helpful Resources -->
+    <div class="third_container">
+        <p class="size26">Helpful Resources</p>
+        <div class="row">
+        <div class="col-12 col-md-4">
+            <div class="card">
+                <img src="images/buggy_map.png" class="card-img-top" alt="buggy_map">
+                <div class="card-body">
+                    <h5 class="card-title">Buggy Race Rules</h5>
+                    <p class="card-text"><u>“Learn about buggy race rules as a beginner: buggy rules, map of the course......”</u></p>
+                </div>
+            </div>
+        </div>
+        <!-- This is column 2 -->
+        <div class="col-12 col-md-4">
+            <div class="card">
+                <img src="images/endowment.jpeg" class="card-img-top" alt="endowment">
+                <div class="card-body">
+                    <h5 class="card-title">BAA Endowment Fund</h5>
+                    <p class="card-text"><u>“Are you a student? Get free money for your buggy idea!”</u></p>
+                </div>
+            </div>
+        </div>  
+        <div class="col-12 col-md-4">
+            <div class="card">
+                <img src="images/makeabuggy.png" class="card-img-top" alt="make_a_buggy">
+                <div class="card-body">
+                    <h5 class="card-title">How to Build a Buggy</h5>
+                    <p class="card-text"><u>“Build your own buggy from 0! Learn the design, mechanics, structures......!”</u></p>
+                </div>
+            </div>
+        </div>  
+    </div>
+    </div>
 
 
     <!-- Footer -->
