update on whatisbuggy 1130

--- a/whatisbuggy.html
+++ b/whatisbuggy.html
@@ -69,7 +69,7 @@
         <span class="navgoingto"><a class="homelink" href="index.html"><u>Home</u></a></span>
         <span class="navgoingto">> What is Buggy</span>
        <div>
-        <p class="size26">What is Buggy</p>
+        <p class="top_intro">What is Buggy</p>
       </div>
       </div>
 
