--- a/whatisbuggy.html
+++ b/whatisbuggy.html
@@ -133,7 +133,7 @@
                 Roughly half of the course is uphill, during which the pushers run
                 and shove the buggy uphill. During the other - downhill - half,
                 drivers are on their own to navigate tight turns at speeds of up to 35mph.</p>
-            <button class="readmore" type="button">Read more about the race</button>
+            <a href="https://cmubuggy.org/reference/" class="btn btn-lg" id="readmore" role="button">Read more about the race</a>
         </div>
         <div class="whenIsIt">
             <br><br>
@@ -150,27 +150,27 @@
         <p class="size26">Begin Your Buggy Journey</p>
         <div class="row">
         <div class="col-12 col-md-4">
-            <div class="card">
+            <div class="card bg-cmu">
                 <div class="card-body">
-                <h5 class="card-title">JOIN A TEAM</h5>
-                <p class="card-text">“Check out our current team list!”</p>
+                <h5 class="card-title" style="color: white">JOIN A TEAM</h5>
+                <p class="card-text" style="color: white"><u>“Check out our current team list!”</u></p>
                 </div>
             </div>
         </div>
         <!-- This is column 2 -->
         <div class="col-12 col-md-4">
-            <div class="card">
+            <div class="card bg-cmu">
                 <div class="card-body">
-                <h5 class="card-title">START A TEAM</h5>
-                <p class="card-text"><u>“All things you want to know before starting your own team!”</u></p>
+                <h5 class="card-title" style="color: white">START A TEAM</h5>
+                <p class="card-text" style="color: white"><u>“All things you want to know before starting your own team!”</u></p>
                 </div>
             </div>
         </div>  
         <div class="col-12 col-md-4">
-            <div class="card">
+            <div class="card bg-cmu">
                 <div class="card-body">
-                <h5 class="card-title">STARTER KIT</h5>
-                <p class="card-text"><u>“Check our information for people who have never tried buggy before!”</u></p>
+                <h5 class="card-title" style="color: white">STARTER KIT</h5>
+                <p class="card-text" style="color: white"><u>“Check our information for people who have never tried buggy before!”</u></p>
                 </div>
             </div>
         </div>  
