--- a/history.html
+++ b/history.html
@@ -21,10 +21,10 @@
   </div>
 </div>
   
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg">
   <div class="container-fluid"> <!-- Changed to container-fluid -->
     <a class="navbar-brand" href="index.html">
-      <img src="images/Screenshot 2023-11-29 at 11.12.16 PM.png" alt="Logo" height="100" class="img-fluid"> <!-- img-fluid for responsive image -->
+      <img src="images/shield-in-circle.svg" alt="Logo" height="100" class="img-fluid"> <!-- img-fluid for responsive image -->
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
