--- a/whatisbuggy.html
+++ b/whatisbuggy.html
@@ -40,7 +40,7 @@
             <a class="nav-link" href="whatisbuggy.html">What is Buggy</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="./history.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="history.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               History
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
