--- a/history.html
+++ b/history.html
@@ -21,7 +21,7 @@
   </div>
 </div>
   
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid"> <!-- Changed to container-fluid -->
     <a class="navbar-brand" href="index.html">
       <img src="images/shield-in-circle.svg" alt="Logo" height="100" class="img-fluid"> <!-- img-fluid for responsive image -->
@@ -161,7 +161,7 @@
         </div>
     </div>
     <!-- Bootstrap JS and jQuery dependencies -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
